@@ -1,3 +1,7 @@
+######### 2013-11-23 ##########
+alter table shop_trades_replayposttrade change column trade_ids trade_ids longtext NOT NULL;
+alter table shop_trades_replayposttrade change column succ_ids succ_ids longtext NOT NULL;
+
 ######### 2013-11-02 ##########
 alter table shop_items_item add column sync_stock tinyint(1) DEFAULT 1;
 
